waves/namespace-backend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: project-backend
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
