waves/namespace-frontend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: project-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
