waves/deployment-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-restapi
  namespace: project-backend
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-restapi
  template:
    metadata:
      labels:
        app: go-restapi
    spec:
      containers:
        - name: restapi
          image: quay.io/rhn_support_sreber/go-restapi:latest
          imagePullPolicy: Always
          ports:
            - name: tcp
              containerPort: 8080
