waves/deployment-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname
  namespace: project-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostname
  template:
    metadata:
      labels:
        app: hostname
    spec:
      containers:
        - name: restapi
          image: quay.io/rhn_support_sreber/hostname:latest
          imagePullPolicy: Always
          ports:
            - name: tcp
              containerPort: 8080
