waves/service-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hostname
  namespace: project-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: hostname
  ports:
    - name: node
      port: 8080
      targetPort: 8080
