waves/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hostname
  name: hostname
  namespace: project-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hostname
    weight: 100
